Homework7/manifests/BillingService/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homework7billingservice
  labels:
    app: homework7billingservice
spec:
  replicas: 2
  selector:
    matchLabels:
      app: homework7billingservice
  template:
    metadata:
      labels:
        app: homework7billingservice
    spec:
      containers:
      - name: homework7billingservice
        image: flash1200/homework7_billingservice:firstversion
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
