Homework7/manifests/BillingService/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homework7billingservice
  labels:
    app: homework7billingservice
spec:
  type: LoadBalancer
  ports:
  - name: homework7-http
    port: 89
    protocol: TCP
    targetPort: 8080
  - name: homework7-https
    port: 443
    protocol: TCP
    targetPort: 443
  selector:
    app: homework7billingservice
